--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,17 @@
 cmake_minimum_required(VERSION 3.22)
 cmake_policy(SET CMP0175 OLD)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 project(GranularDelay VERSION 0.0.1)
 
 add_subdirectory(JUCE)
+set(JUCE_PATH "${CMAKE_SOURCE_DIR}/JUCE")
+include_directories(${JUCE_PATH}/modules)
 
 juce_add_plugin(GranularDelay
     # ICON_BIG ...                              # ICON_* arguments specify a path to an image file to use as an icon for the Standalone
     # ICON_SMALL ...
+    PLUGIN_NAME "Granular Delay"
     COMPANY_NAME "MckinleyWood"                 # Specify the name of the plugin's author
     IS_SYNTH FALSE                              # Is this a synth or an effect?
     NEEDS_MIDI_INPUT FALSE                      # Does the plugin need midi input?
@@ -18,14 +22,19 @@ juce_add_plugin(GranularDelay
     PLUGIN_MANUFACTURER_CODE MWod               # A four-character manufacturer id with at least one upper-case character
     PLUGIN_CODE Gdel                            # A unique four-character plugin id with exactly one upper-case character
     FORMATS VST3 Standalone                     # The formats to build. Other valid formats are: AAX Unity VST AU AUv3
-    PRODUCT_NAME "Granular Delay")              # The name of the final executable, which can differ from the target name
+    PRODUCT_NAME "GranularDelay")               # The name of the final executable, which can differ from the target name
 
 juce_generate_juce_header(GranularDelay)
 
 target_sources(GranularDelay
     PRIVATE
         Source/PluginEditor.cpp
-        Source/PluginProcessor.cpp)
+        Source/PluginProcessor.cpp
+        Source/PluginEditor.h
+        Source/PluginProcessor.h
+        #${JUCE_PATH}/modules/juce_audio_processors/juce_audio_processors.cpp
+        #${JUCE_PATH}/modules/juce_gui_basics/juce_gui_basics.cpp
+        )
 
 target_link_libraries(GranularDelay
     PRIVATE
