--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,8 @@ juce_add_plugin(GranularDelay
     # ICON_BIG ...                              # ICON_* arguments specify a path to an image file to use as an icon for the Standalone
     # ICON_SMALL ...
     PLUGIN_NAME "Granular Delay"
-    COMPANY_NAME "MckinleyWood"                 # Specify the name of the plugin's author
+    COMPANY_NAME "Mckinley Wood"                # Specify the name of the plugin's author
+    BUNDLE_ID "com.MckinleyWood.GranularDelay"
     IS_SYNTH FALSE                              # Is this a synth or an effect?
     NEEDS_MIDI_INPUT FALSE                      # Does the plugin need midi input?
     NEEDS_MIDI_OUTPUT FALSE                     # Does the plugin need midi output?
@@ -32,8 +33,6 @@ target_sources(GranularDelay
         Source/PluginProcessor.cpp
         Source/PluginEditor.h
         Source/PluginProcessor.h
-        #${JUCE_PATH}/modules/juce_audio_processors/juce_audio_processors.cpp
-        #${JUCE_PATH}/modules/juce_gui_basics/juce_gui_basics.cpp
         )
 
 target_link_libraries(GranularDelay
