Cleaned up and retitled, added latest builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,9 +11,9 @@ include_directories(${JUCE_PATH}/modules)
 juce_add_plugin(GranularDelay
     # ICON_BIG ...                              # ICON_* arguments specify a path to an image file to use as an icon for the Standalone
     # ICON_SMALL ...
-    PLUGIN_NAME "Granular Delay"
+    PLUGIN_NAME "MW Delay"
     COMPANY_NAME "Mckinley Wood"                # Specify the name of the plugin's author
-    BUNDLE_ID "com.MckinleyWood.GranularDelay"
+    BUNDLE_ID "com.MckinleyWood.MWDelay"
     IS_SYNTH FALSE                              # Is this a synth or an effect?
     NEEDS_MIDI_INPUT FALSE                      # Does the plugin need midi input?
     NEEDS_MIDI_OUTPUT FALSE                     # Does the plugin need midi output?
@@ -21,9 +21,9 @@ juce_add_plugin(GranularDelay
     EDITOR_WANTS_KEYBOARD_FOCUS TRUE            # Does the editor need keyboard focus?
     COPY_PLUGIN_AFTER_BUILD TRUE                # Should the plugin be installed to a default location after building?
     PLUGIN_MANUFACTURER_CODE MWod               # A four-character manufacturer id with at least one upper-case character
-    PLUGIN_CODE Gdel                            # A unique four-character plugin id with exactly one upper-case character
-    FORMATS VST3 Standalone                     # The formats to build. Other valid formats are: AAX Unity VST AU AUv3
-    PRODUCT_NAME "GranularDelay")               # The name of the final executable, which can differ from the target name
+    PLUGIN_CODE mwDl                            # A unique four-character plugin id with exactly one upper-case character
+    FORMATS VST3 AU Standalone                  # The formats to build. Other valid formats are: AAX Unity VST AU AUv3
+    PRODUCT_NAME "MWDelay")                     # The name of the final executable, which can differ from the target name
 
 juce_generate_juce_header(GranularDelay)
 
